--- a/features/feature_exchange_rates/src/main/res/values/strings.xml
+++ b/features/feature_exchange_rates/src/main/res/values/strings.xml
@@ -1,2 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources />
+<resources>
+    <string name="amount">Amount</string>
+    <string name="try_again">Try again</string>
+</resources>
